SERVER-984 sorting of infinity